--- a/Projects/Architecture3.Common/Architecture3.Common.csproj
+++ b/Projects/Architecture3.Common/Architecture3.Common.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D383FC01-3AB8-4106-98EA-543607ACE0E9}</ProjectGuid>
+    <ProjectGuid>{B97EFB86-FB8B-43B7-9892-D4E2AF7257B6}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Architecture3.WebApi.Dtos</RootNamespace>
-    <AssemblyName>Architecture3.WebApi.Dtos</AssemblyName>
+    <RootNamespace>Architecture3.Common</RootNamespace>
+    <AssemblyName>Architecture3.Common</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -30,10 +30,14 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>..\..\Architecture3.ruleset</CodeAnalysisRuleSet>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <CodeAnalysisRuleSet>..\..\Architecture3.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,8 +48,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Product\ProductItem.cs" />
+    <Compile Include="Log4Net\Extension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SharedStructs\Paged.cs" />
+    <Compile Include="SharedStructs\ResponseParams\CollectionResult.cs" />
+    <Compile Include="SharedStructs\ResponseParams\PagedCollectionResult.cs" />
+    <Compile Include="SharedStructs\ResponseParams\Result.cs" />
+    <Compile Include="Tools\Guard.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
