--- a/Projects/Architecture3.Logic/Architecture3.Logic.csproj
+++ b/Projects/Architecture3.Logic/Architecture3.Logic.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B97EFB86-FB8B-43B7-9892-D4E2AF7257B6}</ProjectGuid>
+    <ProjectGuid>{AC510806-42A1-4B3F-8A6C-97B96398D475}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Architecture3.Common</RootNamespace>
-    <AssemblyName>Architecture3.Common</AssemblyName>
+    <RootNamespace>Architecture3.Logic</RootNamespace>
+    <AssemblyName>Architecture3.Logic</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -20,8 +20,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>..\..\Architecture3.ruleset</CodeAnalysisRuleSet>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <CodeAnalysisRuleSet>..\..\Architecture3.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -30,14 +30,10 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <CodeAnalysisRuleSet>..\..\Architecture3.ruleset</CodeAnalysisRuleSet>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="log4net, Version=1.2.15.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\log4net.2.0.5\lib\net45-full\log4net.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,27 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="Handlers\Interfaces\IHandler.cs" />
-    <Compile Include="Handlers\Interfaces\IMediator.cs" />
-    <Compile Include="Handlers\Interfaces\IRequest.cs" />
-    <Compile Include="Handlers\Interfaces\IRequestHandler.cs" />
-    <Compile Include="Handlers\Internal\AbstractHandlerWrapper.cs" />
-    <Compile Include="Handlers\Internal\HandlerWrapper.cs" />
-    <Compile Include="Handlers\Internal\RequestHandlerWrapper.cs" />
-    <Compile Include="Handlers\Internal\RequestHandlerWrapper`1.cs" />
-    <Compile Include="Handlers\Internal\VoidRequestHandlerWrapper.cs" />
-    <Compile Include="Handlers\Internal\VoidRequestHandlerWrapper`1.cs" />
-    <Compile Include="Handlers\Mediator.cs" />
-    <Compile Include="Log4Net\Extension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SharedStructs\Paged.cs" />
-    <Compile Include="SharedStructs\RequestParams\Sort.cs" />
-    <Compile Include="SharedStructs\RequestParams\SortPageSizeSkip.cs" />
-    <Compile Include="SharedStructs\ResponseParams\CollectionResult.cs" />
-    <Compile Include="SharedStructs\ResponseParams\PagedCollectionResult.cs" />
-    <Compile Include="SharedStructs\ResponseParams\Result.cs" />
-    <Compile Include="Tools\Guard.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -78,7 +54,19 @@
     <Analyzer Include="..\..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Product\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Architecture3.Common\Architecture3.Common.csproj">
+      <Project>{B97EFB86-FB8B-43B7-9892-D4E2AF7257B6}</Project>
+      <Name>Architecture3.Common</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Architecture3.WebApi.Dtos\Architecture3.WebApi.Dtos.csproj">
+      <Project>{D383FC01-3AB8-4106-98EA-543607ACE0E9}</Project>
+      <Name>Architecture3.WebApi.Dtos</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
