--- a/Projects/Architecture3.Logic/Architecture3.Logic.csproj
+++ b/Projects/Architecture3.Logic/Architecture3.Logic.csproj
@@ -34,6 +34,10 @@
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentValidation, Version=6.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\FluentValidation.6.2.1.0\lib\Net45\FluentValidation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,7 +48,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Product\FindPagedCollection\ProductItemPagedCollectionRepository.cs" />
     <Compile Include="Product\FindPagedCollection\Query.cs" />
+    <Compile Include="Product\FindPagedCollection\QueryHandler.cs" />
+    <Compile Include="Product\FindPagedCollection\QueryValidator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
