--- a/Projects/Architecture3.WebApi.Dtos/Architecture3.WebApi.Dtos.csproj
+++ b/Projects/Architecture3.WebApi.Dtos/Architecture3.WebApi.Dtos.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Paged.cs" />
     <Compile Include="Product\FindPagedCollection\ProductItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
