--- a/Projects/Architecture3.Common/Architecture3.Common.csproj
+++ b/Projects/Architecture3.Common/Architecture3.Common.csproj
@@ -73,7 +73,9 @@
     <Compile Include="Log4Net\Extension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\Guard.cs" />
+    <Compile Include="ValueObjects\Paged.cs" />
     <Compile Include="ValueObjects\PageSizeSkip.cs" />
+    <Compile Include="ValueObjects\SortPageSizeSkip.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
