--- a/Projects/Architecture3.Common/Architecture3.Common.csproj
+++ b/Projects/Architecture3.Common/Architecture3.Common.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Handlers\Internal\VoidRequestHandlerWrapper.cs" />
     <Compile Include="Handlers\Internal\VoidRequestHandlerWrapper`1.cs" />
     <Compile Include="Handlers\Mediator.cs" />
+    <Compile Include="Handlers\SingleInstanceFactory.cs" />
     <Compile Include="Log4Net\Extension.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\Guard.cs" />
