--- a/Projects/Architecture3.Logic/Architecture3.Logic.csproj
+++ b/Projects/Architecture3.Logic/Architecture3.Logic.csproj
@@ -38,6 +38,10 @@
       <HintPath>..\..\packages\CSharpFunctionalExtensions.1.2.0\lib\net45\CSharpFunctionalExtensions.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Dapper, Version=1.40.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Dapper.1.42\lib\net45\Dapper.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="FluentValidation, Version=6.2.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\FluentValidation.6.2.1.0\lib\Net45\FluentValidation.dll</HintPath>
       <Private>True</Private>
@@ -52,8 +56,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DbConnectionProvider.cs" />
+    <Compile Include="Interfaces\IDbConnectionProvider.cs" />
+    <Compile Include="Product\FilterPaged\Interfaces\IRepository.cs" />
     <Compile Include="Product\FilterPaged\Product.cs" />
     <Compile Include="Product\FilterPaged\QueryHandler.cs" />
+    <Compile Include="Product\FilterPaged\Repository.cs" />
     <Compile Include="Product\FilterPaged\ResultMapper.cs" />
     <Compile Include="Product\FilterPaged\Query.cs" />
     <Compile Include="Product\FilterPaged\Interfaces\IResultMapper.cs" />
