--- a/Projects/Architecture3.Logic/packages.config
+++ b/Projects/Architecture3.Logic/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CSharpFunctionalExtensions" version="1.2.0" targetFramework="net461" />
+  <package id="Dapper" version="1.42" targetFramework="net461" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net461" />
   <package id="StyleCop.Analyzers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
 </packages>
