--- a/Projects/Architecture3.WebApi.Dtos/Architecture3.WebApi.Dtos.csproj
+++ b/Projects/Architecture3.WebApi.Dtos/Architecture3.WebApi.Dtos.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Paged.cs" />
     <Compile Include="Product\FilterPaged\Product.cs" />
+    <Compile Include="Product\Get\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
