--- a/Projects/Architecture3.Logic/Architecture3.Logic.csproj
+++ b/Projects/Architecture3.Logic/Architecture3.Logic.csproj
@@ -57,6 +57,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DbConnectionProvider.cs" />
+    <Compile Include="Facades\FilterPagedFacade.cs" />
+    <Compile Include="Facades\ProductsGetFacade.cs" />
+    <Compile Include="Facades\ResponseType.cs" />
     <Compile Include="Interfaces\IDbConnectionProvider.cs" />
     <Compile Include="Product\FilterPaged\Interfaces\IRepository.cs" />
     <Compile Include="Product\FilterPaged\Product.cs" />
