--- a/Projects/Architecture3.WebApi/Architecture3.WebApi.csproj
+++ b/Projects/Architecture3.WebApi/Architecture3.WebApi.csproj
@@ -136,10 +136,8 @@
     <Compile Include="App_Start\RegisterRoutes.cs" />
     <Compile Include="App_Start\RegisterSwagger.cs" />
     <Compile Include="App_Start\RegisterValidation.cs" />
+    <Compile Include="Controllers\Base\BaseApiController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
-    <Compile Include="Facades\FilterPagedFacade.cs" />
-    <Compile Include="Facades\ProductsGetFacade.cs" />
-    <Compile Include="Facades\ResponseType.cs" />
     <Compile Include="Infrastructure\GlobalExceptionLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
