--- a/Projects/Architecture3.Logic/packages.config
+++ b/Projects/Architecture3.Logic/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="5.0.0" targetFramework="net461" />
   <package id="CSharpFunctionalExtensions" version="1.2.0" targetFramework="net461" />
   <package id="Dapper" version="1.42" targetFramework="net461" />
   <package id="FluentValidation" version="6.2.1.0" targetFramework="net461" />
