--- a/Projects/Architecture3.Logic/Architecture3.Logic.csproj
+++ b/Projects/Architecture3.Logic/Architecture3.Logic.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AutoMapperConfiguration.cs" />
     <Compile Include="DbConnectionProvider.cs" />
     <Compile Include="Facades\FilterPagedFacade.cs" />
     <Compile Include="Facades\ProductsGetFacade.cs" />
