--- a/Projects/Architecture3.Types/Architecture3.Types.csproj
+++ b/Projects/Architecture3.Types/Architecture3.Types.csproj
@@ -48,9 +48,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FunctionalExtensions\Maybe.cs" />
+    <Compile Include="FunctionalExtensions\ValueObject.cs" />
     <Compile Include="GreaterThanZeroInt.cs" />
+    <Compile Include="FunctionalExtensions\IResultX.cs" />
     <Compile Include="NonNegativeInt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="FunctionalExtensions\ResultCommonLogicX.cs" />
+    <Compile Include="FunctionalExtensions\ResultX.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
