--- a/Projects/Architecture3.Types/Architecture3.Types.csproj
+++ b/Projects/Architecture3.Types/Architecture3.Types.csproj
@@ -47,11 +47,11 @@
     <Compile Include="FunctionalExtensions\Maybe.cs" />
     <Compile Include="FunctionalExtensions\ValueObject.cs" />
     <Compile Include="GreaterThanZeroInt.cs" />
-    <Compile Include="FunctionalExtensions\IResultX.cs" />
+    <Compile Include="FunctionalExtensions\IResult.cs" />
     <Compile Include="NonNegativeInt.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="FunctionalExtensions\ResultCommonLogicX.cs" />
-    <Compile Include="FunctionalExtensions\ResultX.cs" />
+    <Compile Include="FunctionalExtensions\ResultCommonLogic.cs" />
+    <Compile Include="FunctionalExtensions\Result.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
