--- a/Tests/Architecture3.Common.Tests/Architecture3.Common.Tests.csproj
+++ b/Tests/Architecture3.Common.Tests/Architecture3.Common.Tests.csproj
@@ -66,6 +66,12 @@
     <Analyzer Include="..\..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Projects\Architecture3.Common\Architecture3.Common.csproj">
+      <Project>{b97efb86-fb8b-43b7-9892-d4e2af7257b6}</Project>
+      <Name>Architecture3.Common</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
