--- a/Tests/Architecture3.Types.Tests/Architecture3.Types.Tests.csproj
+++ b/Tests/Architecture3.Types.Tests/Architecture3.Types.Tests.csproj
@@ -66,6 +66,12 @@
     <Analyzer Include="..\..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\StyleCop.Analyzers.CodeFixes.dll" />
     <Analyzer Include="..\..\packages\StyleCop.Analyzers.1.0.0\analyzers\dotnet\cs\StyleCop.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Projects\Architecture3.Types\Architecture3.Types.csproj">
+      <Project>{9033ba8a-c531-4dcd-a342-a4b57ddd11d9}</Project>
+      <Name>Architecture3.Types</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
