--- a/Projects/Architecture3.Logic/Architecture3.Logic.csproj
+++ b/Projects/Architecture3.Logic/Architecture3.Logic.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Facades\FilterPagedFacade.cs" />
     <Compile Include="Facades\ProductsGetFacade.cs" />
     <Compile Include="Facades\ErrorType.cs" />
+    <Compile Include="Facades\VersionGetFacade.cs" />
     <Compile Include="Interfaces\IDbConnectionProvider.cs" />
     <Compile Include="Product\FilterPaged\Interfaces\IRepository.cs" />
     <Compile Include="Product\FilterPaged\Product.cs" />
@@ -74,6 +75,8 @@
     <Compile Include="Product\Get\QueryHandler.cs" />
     <Compile Include="Product\Get\Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Version\QueryHandler.cs" />
+    <Compile Include="Version\Query.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
