--- a/Projects/Architecture3.WebApi/Architecture3.WebApi.csproj
+++ b/Projects/Architecture3.WebApi/Architecture3.WebApi.csproj
@@ -138,6 +138,7 @@
     <Compile Include="App_Start\RegisterValidation.cs" />
     <Compile Include="Controllers\Base\BaseApiController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
+    <Compile Include="Controllers\VersionController.cs" />
     <Compile Include="Infrastructure\GlobalExceptionLogger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
