--- a/Projects/Architecture3.Logic/Architecture3.Logic.csproj
+++ b/Projects/Architecture3.Logic/Architecture3.Logic.csproj
@@ -57,13 +57,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AutoMapperConfiguration.cs" />
-    <Compile Include="DbConnectionProvider.cs" />
-    <Compile Include="Facades\Error.cs" />
+    <Compile Include="Database\DbConnectionProvider.cs" />
+    <Compile Include="Facades\Shared\Error.cs" />
     <Compile Include="Facades\FilterPagedFacade.cs" />
     <Compile Include="Facades\ProductsGetFacade.cs" />
-    <Compile Include="Facades\ErrorType.cs" />
+    <Compile Include="Facades\Shared\ErrorType.cs" />
     <Compile Include="Facades\VersionGetFacade.cs" />
-    <Compile Include="Interfaces\IDbConnectionProvider.cs" />
+    <Compile Include="Database\Interfaces\IDbConnectionProvider.cs" />
     <Compile Include="Product\FilterPaged\Interfaces\IRepository.cs" />
     <Compile Include="Product\FilterPaged\Product.cs" />
     <Compile Include="Product\FilterPaged\QueryHandler.cs" />
