--- a/Projects/Architecture3.Logic/Architecture3.Logic.csproj
+++ b/Projects/Architecture3.Logic/Architecture3.Logic.csproj
@@ -64,19 +64,19 @@
     <Compile Include="Facades\Shared\ErrorType.cs" />
     <Compile Include="Facades\VersionGetFacade.cs" />
     <Compile Include="Database\Interfaces\IDbConnectionProvider.cs" />
-    <Compile Include="Product\FilterPaged\Interfaces\IRepository.cs" />
-    <Compile Include="Product\FilterPaged\Product.cs" />
-    <Compile Include="Product\FilterPaged\QueryHandler.cs" />
-    <Compile Include="Product\FilterPaged\Repository.cs" />
-    <Compile Include="Product\FilterPaged\Query.cs" />
-    <Compile Include="Product\Get\Interfaces\IRepository.cs" />
-    <Compile Include="Product\Get\Product.cs" />
-    <Compile Include="Product\Get\Query.cs" />
-    <Compile Include="Product\Get\QueryHandler.cs" />
-    <Compile Include="Product\Get\Repository.cs" />
+    <Compile Include="CQ\Product\FilterPaged\Interfaces\IRepository.cs" />
+    <Compile Include="CQ\Product\FilterPaged\Product.cs" />
+    <Compile Include="CQ\Product\FilterPaged\QueryHandler.cs" />
+    <Compile Include="CQ\Product\FilterPaged\Repository.cs" />
+    <Compile Include="CQ\Product\FilterPaged\Query.cs" />
+    <Compile Include="CQ\Product\Get\Interfaces\IRepository.cs" />
+    <Compile Include="CQ\Product\Get\Product.cs" />
+    <Compile Include="CQ\Product\Get\Query.cs" />
+    <Compile Include="CQ\Product\Get\QueryHandler.cs" />
+    <Compile Include="CQ\Product\Get\Repository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Version\Get\QueryHandler.cs" />
-    <Compile Include="Version\Get\Query.cs" />
+    <Compile Include="CQ\Version\Get\QueryHandler.cs" />
+    <Compile Include="CQ\Version\Get\Query.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
