--- a/Projects/Architecture3.Common/Architecture3.Common.csproj
+++ b/Projects/Architecture3.Common/Architecture3.Common.csproj
@@ -61,17 +61,16 @@
     <Compile Include="Database\CommandHelper.cs" />
     <Compile Include="Database\DatabaseExtension.cs" />
     <Compile Include="FluentValidation\AbstractClassValidator.cs" />
-    <Compile Include="GlobalSuppressions.cs" />
-    <Compile Include="Handlers\Interfaces\IHandler.cs" />
+    <Compile Include="Handlers\Interfaces\IVoidRequestHandler.cs" />
     <Compile Include="Handlers\Interfaces\IMediator.cs" />
     <Compile Include="Handlers\Interfaces\IRequest.cs" />
     <Compile Include="Handlers\Interfaces\IRequestHandler.cs" />
     <Compile Include="Handlers\Internal\AbstractHandlerWrapper.cs" />
     <Compile Include="Handlers\Internal\HandlerWrapper.cs" />
     <Compile Include="Handlers\Internal\RequestHandlerWrapper.cs" />
-    <Compile Include="Handlers\Internal\RequestHandlerWrapper`1.cs" />
+    <Compile Include="Handlers\Internal\AbstractRequestHandlerWrapper.cs" />
+    <Compile Include="Handlers\Internal\AbstractVoidRequestHandlerWrapper.cs" />
     <Compile Include="Handlers\Internal\VoidRequestHandlerWrapper.cs" />
-    <Compile Include="Handlers\Internal\VoidRequestHandlerWrapper`1.cs" />
     <Compile Include="Handlers\Mediator.cs" />
     <Compile Include="Handlers\SingleInstanceFactory.cs" />
     <Compile Include="Log4Net\Extension.cs" />
