--- a/Projects/Architecture3.WebApi.Dtos/Architecture3.WebApi.Dtos.csproj
+++ b/Projects/Architecture3.WebApi.Dtos/Architecture3.WebApi.Dtos.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Paged.cs" />
     <Compile Include="Product\FilterPaged\Product.cs" />
     <Compile Include="Product\Get\Product.cs" />
+    <Compile Include="Product\Put\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
