--- a/Projects/Architecture3.Logic/Architecture3.Logic.csproj
+++ b/Projects/Architecture3.Logic/Architecture3.Logic.csproj
@@ -61,11 +61,13 @@
     <Compile Include="CQ\Product\Delete\CommandHandler.cs" />
     <Compile Include="CQ\Product\Delete\Interfaces\IRepository.cs" />
     <Compile Include="CQ\Product\Delete\Repository.cs" />
+    <Compile Include="CQ\Product\Post\Command.cs" />
     <Compile Include="CQ\Product\Put\Command.cs" />
     <Compile Include="CQ\Product\Put\CommandHandler.cs" />
     <Compile Include="CQ\Product\Put\Interfaces\IRepository.cs" />
     <Compile Include="CQ\Product\Put\Repository.cs" />
     <Compile Include="CQ\Product\SharedQueries.cs" />
+    <Compile Include="CQ\Product\ValueObjects\Name.cs" />
     <Compile Include="CQ\TemplateMethods\Commands\DeleteCommandHandlerTemplate.cs" />
     <Compile Include="CQ\TemplateMethods\Commands\Interfaces\IIdVersion.cs" />
     <Compile Include="CQ\TemplateMethods\Commands\Interfaces\IDeleteRepository.cs" />
